Preserve selected card after a search. Use new getIdFunction to preserve selected card. Moved RecordController her from projects.

--- a/pom.xml
+++ b/pom.xml
@@ -137,14 +137,16 @@
 				</executions>
 			</plugin>
 
+			<!-- From https://maven.apache.org/plugins/maven-source-plugin/usage.html -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
+						<phase>verify</phase>
 						<goals>
-							<goal>jar</goal>
+							<goal>jar-no-fork</goal>
 						</goals>
 					</execution>
 				</executions>
