--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.neptunedreams</groupId>
 	<artifactId>tango</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.3-SNAPSHOT</version>
 	<name>Tango</name>
 	<packaging>jar</packaging>
 	
@@ -167,6 +167,18 @@
 <!--					</execution>-->
 <!--				</executions>-->
 <!--			</plugin>-->
+
+			<!-- Allows user to launch from maven: mvn exec:java -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<configuration>
+					<mainClass>com.neptunedreams.util.SwipeViewTest</mainClass>
+					<cleanupDaemonThreads>false</cleanupDaemonThreads>
+				</configuration>
+			</plugin>
+
 		</plugins>
 		
 	</build>
