--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.neptunedreams</groupId>
 	<artifactId>tango</artifactId>
-	<version>2.0.6-SNAPSHOT</version>
+	<version>2.0.7-SNAPSHOT</version>
 	<name>Tango</name>
 	<packaging>jar</packaging>
 	
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>23.0</version>
+			<version>30.1.1-jre</version>
 		</dependency>
 
 
