--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- These properties will be set by the Maven Dependency plugin -->
 		<!--suppress UnresolvedMavenProperty -->
-		<annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
+		<!--<annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>-->
 		<!--suppress UnresolvedMavenProperty -->
 		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
 	</properties>
@@ -52,13 +52,13 @@
 		<dependency>
 			<groupId>org.checkerframework</groupId>
 			<artifactId>checker-qual</artifactId>
-			<version>3.2.0</version>
+			<version>3.29.1-SNAPSHOT</version>
 		</dependency>
 		<!-- If using JDK 8, add the following additional dependencies -->
 		<dependency>
 			<groupId>org.checkerframework</groupId>
-			<artifactId>jdk8</artifactId>
-			<version>3.2.0</version>
+			<artifactId>checker</artifactId>
+			<version>3.29.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.errorprone</groupId>
@@ -86,7 +86,7 @@
 				<configuration>
 					<fork>true</fork>
 					<source>1.8</source>
-					<target>1.8</target>
+					<target>1.8</target>S
 					<compilerArguments>
 						<Xmaxerrs>10000</Xmaxerrs>
 						<Xmaxwarns>10000</Xmaxwarns>
@@ -96,7 +96,7 @@
 						<path>
 							<groupId>org.checkerframework</groupId>
 							<artifactId>checker</artifactId>
-							<version>3.2.0</version>
+							<version>3.29.1-SNAPSHOT</version>
 						</path>
 					</annotationProcessorPaths>
 					<annotationProcessors>
